--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
-<!DOCTYPE>
-<html lang="en-CA">
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<link rel="icon" type="image/x-icon" href="/favicon.ico"
-	<title> Jadedlashed </title>
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eyelash Extensions</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
-
 <body>
-	This is what the webrowser displays
-</body>
+    <header>
+        <h1>Your Lash Studio</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="book.html">Book Now</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <h2>Welcome to Our Lash Studio</h2>
+        <p>Enhance your natural beauty with our professional eyelash extension services. We offer various styles and lengths to suit your preferences.</p>
+        </main>
+
+    <footer>
+        <p>&copy; 2023 Your Lash Studio</p>
+    </footer>
+</body>
 </html>
